# cng3

./: .gitignore  Cargo.toml  README.md  cli.scripts  gui.scripts  init.scripts
document/: .$cng3.drawio.bkp  add_plugin.mk  cng3.drawio  cron.mk
src/: app.rs  cfg.rs  consts.rs  main.rs  messages.rs  utils.rs  web.rs
src/plugins/: mod.rs  plugin_cli.rs  plugin_devices.rs  plugin_infos.rs  plugin_log.rs  plugin_monitor.rs  plugin_mqtt.rs  plugin_music.rs  plugin_nas.rs  plugin_panels.rs  plugin_runtipi.rs  plugin_scripts.rs  plugin_system.rs  plugin_todos.rs  plugin_weather.rs  plugins_main.rs
src/utils/: dev_info.rs  ffmpeg.rs  log.rs  mod.rs  mode.rs  msg.rs  nas_info.rs  panel.rs  system.rs  task.rs  time.rs  weather.rs  yt_dlp.rs
utils/: build_all.sh  daemon.sh
