[package]
name = "cng3"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
async-trait = "0.1.88"
chrono = "0.4.41"
log = "0.4.27"
once_cell = "1.21.3"
ratatui = "0.29.0"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.140"
shell-words = "1.1.0"
tokio = { version = "1.45.1", features = ["full"] }
