[package]
name = "cng3"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
anyhow = "1.0.98"
async-trait = "0.1.88"
base64 = "0.22.1"
chrono = "0.4.41"
filetime = "0.2.25"
hex = "0.4.3"
log = "0.4.27"
notify = "8.0.0"
once_cell = "1.21.3"
ratatui = "0.29.0"
regex = "1.11.1"
reqwest = { version = "0.12.20", features = ["json"] }
rumqttc = "0.24.0"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
shell-words = "1.1.0"
sysinfo = "0.35.2"
tokio = { version = "1.45.1", features = ["full"] }
walkdir = "2.5.0"
