[package]
name = "cng3"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-web = "4"
anyhow = "1.0.99"
async-trait = "0.1.88"
base64 = "0.22.1"
chrono = "0.4.41"
filetime = "0.2.25"
futures-util = "0.3.31"
hex = "0.4.3"
log = "0.4.27"
notify = "8.2.0"
once_cell = "1.21.3"
ratatui = "0.29.0"
regex = "1.11.1"
reqwest = { version = "0.12", features = ["json"] }
rumqttc = "0.24.0"
sanitize-filename = "0.6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.9"
shell-words = "1.1.0"
sysinfo = "0.37.0"
tokio = { version = "1", features = ["full"] }
unicode-width = "0.2.0"
uuid = { version = "1", features = ["v4"] }
walkdir = "2.5.0"
